[C-1303][C-1304] Fix misc. profile layout issues (#2129)
* [C-1303] Improve popup display to try to stay in window

* [C-1304] Fix profile layout

--- a/apps/audius-client/packages/web/src/components/lineup/Lineup.module.css
+++ b/apps/audius-client/packages/web/src/components/lineup/Lineup.module.css
@@ -26,5 +26,5 @@
 .featuredDelineate {
   padding: 0px !important;
   margin: 0px !important;
-  margin-bottom: 20px !important;
+  margin-bottom: 24px !important;
 }
